--- a/NNet/NNetSimu/WindowConfiguration24.cnf
+++ b/NNet/NNetSimu/WindowConfiguration24.cnf
@@ -3,11 +3,11 @@ ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_APPL_WINDOW -1919 1082 1626 757
 ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MONITOR_WINDOW -1922 1837 1338 288
-ShowWindow IDM_MONITOR_WINDOW SW_SHOWNORMAL
+ShowWindow IDM_MONITOR_WINDOW SW_HIDE
 MoveWindow IDM_DESC_WINDOW -594 1838 301 289
 ShowWindow IDM_DESC_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MINI_WINDOW -299 1086 306 323
-ShowWindow IDM_MINI_WINDOW SW_HIDE
+ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MAIN_WINDOW -1911 1134 1610 675
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_PARAM_WINDOW -309 1599 316 283
