--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -48,12 +48,6 @@
     <ClInclude Include="SelectAllCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="NewInputNeuronCommand.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="NewNeuronCommand.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="SetTriggerSoundCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -121,6 +115,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="RestrictSelectionCommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NewNeuronCommandT.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
