--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -196,7 +196,6 @@
     <ClInclude Include="InputNeuron.h" />
     <ClInclude Include="Knot.h" />
     <ClInclude Include="MicroMeterPosDir.h" />
-    <ClInclude Include="ModelUtilities.h" />
     <ClInclude Include="MonitorData.h" />
     <ClInclude Include="Neuron.h" />
     <ClInclude Include="NNetColors.h" />
@@ -234,9 +233,9 @@
     <ClCompile Include="Analyzer.cpp" />
     <ClCompile Include="BaseKnot.cpp" />
     <ClCompile Include="ConnectionNeuron.cpp" />
+    <ClCompile Include="Connector.cpp" />
     <ClCompile Include="InputNeuron.cpp" />
     <ClCompile Include="Knot.cpp" />
-    <ClCompile Include="ModelUtilities.cpp" />
     <ClCompile Include="MonitorData.cpp" />
     <ClCompile Include="Neuron.cpp" />
     <ClCompile Include="NNetModel.cpp">
