--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClInclude Include="MoveShapeCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AddSignalCommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CommandStack.cpp">
