--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="Connect2PipeCommand.h" />
     <ClInclude Include="CopySelectionCommand.h" />
     <ClInclude Include="CreateConnectorCommand.h" />
+    <ClInclude Include="DeleteConnectorCommand.h" />
     <ClInclude Include="DeletePipeCommand.h" />
     <ClInclude Include="DeleteSignalCommand.h" />
     <ClInclude Include="DeleteTrackCommand.h" />
