--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClInclude Include="DisconnectConnectorCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DeleteConnectorCommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CommandStack.cpp">
