--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClInclude Include="DeleteConnectorCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RotateConnectorCommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CommandStack.cpp">
