--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -138,6 +138,9 @@
     <ClInclude Include="RotateConnectorCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SetShapeCommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CommandStack.cpp">
