--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -188,7 +188,6 @@
     <ClInclude Include="AutoOpen.h" />
     <ClInclude Include="BaseKnot.h" />
     <ClInclude Include="CalcOrthoVector.h" />
-    <ClInclude Include="Compound.h" />
     <ClInclude Include="ConnectionNeuron.h" />
     <ClInclude Include="Connector.h" />
     <ClInclude Include="MicroMeterPointVector.h" />
@@ -236,7 +235,6 @@
     <ClCompile Include="Analyzer.cpp" />
     <ClCompile Include="BaseKnot.cpp" />
     <ClCompile Include="CalcOrthoVector.cpp" />
-    <ClCompile Include="Compound.cpp" />
     <ClCompile Include="ConnectionNeuron.cpp" />
     <ClCompile Include="Connector.cpp" />
     <ClCompile Include="InputNeuron.cpp" />
@@ -258,6 +256,7 @@
     <ClCompile Include="OutputNeuron.cpp" />
     <ClCompile Include="Pipe.cpp" />
     <ClCompile Include="Shape.cpp" />
+    <ClCompile Include="ShapeIdList.cpp" />
     <ClCompile Include="Signal.cpp" />
     <ClCompile Include="ParameterType.cpp" />
     <ClCompile Include="ShapeType.cpp" />
