--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -577,6 +577,7 @@
     <ClCompile Include="NNetWinWrappers.cpp" />
     <ClCompile Include="PlugInAnimation.cpp" />
     <ClCompile Include="Preferences.cpp" />
+    <ClCompile Include="RotationAnimation.cpp" />
     <ClCompile Include="scale.cpp" />
     <ClCompile Include="SlowMotionDisplay.cpp" />
     <ClCompile Include="TimeDisplay.cpp" />
@@ -599,6 +600,7 @@
     <ClInclude Include="AlignAnimation.h" />
     <ClInclude Include="ComputeThread.h" />
     <ClInclude Include="D2D_DrawContext.h" />
+    <ClInclude Include="RotationAnimation.h" />
     <ClInclude Include="Measurement.h" />
     <ClInclude Include="NNetWinWrappers.h" />
     <ClInclude Include="PlugInAnimation.h" />
