intermediate. compiles but not functional

--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -85,6 +85,7 @@
     <ClInclude Include="CreateConnectorCommand.h" />
     <ClInclude Include="DeleteConnectorCommand.h" />
     <ClInclude Include="DeletePipeCommand.h" />
+    <ClInclude Include="DeleteSelectionCommand.h" />
     <ClInclude Include="DeleteSignalCommand.h" />
     <ClInclude Include="DeleteTrackCommand.h" />
     <ClInclude Include="DisconnectBaseKnotCommand.h" />
