--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -600,6 +600,7 @@
     <ClInclude Include="AlignAnimation.h" />
     <ClInclude Include="ComputeThread.h" />
     <ClInclude Include="D2D_DrawContext.h" />
+    <ClInclude Include="MakeConnectorCommand.h" />
     <ClInclude Include="RotationAnimation.h" />
     <ClInclude Include="Measurement.h" />
     <ClInclude Include="NNetWinWrappers.h" />
