--- a/NNet/NNetWindows/NNetWindows.vcxproj.filters
+++ b/NNet/NNetWindows/NNetWindows.vcxproj.filters
@@ -191,5 +191,8 @@
     <ClInclude Include="RotationAnimation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MakeConnectorCommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
