refactoring, undo animation not finished

--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -74,6 +74,7 @@
     <ClInclude Include="AddOutgoing2PipeCommand.h" />
     <ClInclude Include="AddSignalCommand.h" />
     <ClInclude Include="AnalyzeCommand.h" />
+    <ClInclude Include="AnimationChainCommand.h" />
     <ClInclude Include="AppendInputNeuronCommand.h" />
     <ClInclude Include="AppendNeuronCommand.h" />
     <ClInclude Include="ClearBeepersCommand.h" />
