--- a/NNet/Commands/Commands.vcxproj.filters
+++ b/NNet/Commands/Commands.vcxproj.filters
@@ -144,6 +144,9 @@
     <ClInclude Include="CommandFunctions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AnimationChainCommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CommandStack.cpp">
