PluginAnimation implemented. Running.

--- a/NNet/NNetWindows/NNetWindows.vcxproj
+++ b/NNet/NNetWindows/NNetWindows.vcxproj
@@ -575,6 +575,7 @@
     <ClCompile Include="D2D_DrawContext.cpp" />
     <ClCompile Include="Measurement.cpp" />
     <ClCompile Include="NNetWinWrappers.cpp" />
+    <ClCompile Include="PluginAnimationCommand.cpp" />
     <ClCompile Include="Preferences.cpp" />
     <ClCompile Include="scale.cpp" />
     <ClCompile Include="SlowMotionDisplay.cpp" />
@@ -601,6 +602,7 @@
     <ClInclude Include="D2D_DrawContext.h" />
     <ClInclude Include="Measurement.h" />
     <ClInclude Include="NNetWinWrappers.h" />
+    <ClInclude Include="PluginAnimationCommand.h" />
     <ClInclude Include="Preferences.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="scale.h" />
