--- a/NNet/NNetModel/NNetModel.vcxproj
+++ b/NNet/NNetModel/NNetModel.vcxproj
@@ -188,6 +188,7 @@
     <ClInclude Include="AutoOpen.h" />
     <ClInclude Include="BaseKnot.h" />
     <ClInclude Include="CalcOrthoVector.h" />
+    <ClInclude Include="ClosedConnector.h" />
     <ClInclude Include="ConnectionNeuron.h" />
     <ClInclude Include="Connector.h" />
     <ClInclude Include="MicroMeterPointVector.h" />
@@ -234,6 +235,7 @@
   <ItemGroup>
     <ClCompile Include="Analyzer.cpp" />
     <ClCompile Include="BaseKnot.cpp" />
+    <ClCompile Include="ClosedConnector.cpp" />
     <ClCompile Include="ConnectionNeuron.cpp" />
     <ClCompile Include="Connector.cpp" />
     <ClCompile Include="InputNeuron.cpp" />
