--- a/NNet/Tests/test_1.in
+++ b/NNet/Tests/test_1.in
@@ -1,1 +1,191 @@
-DeleteShape 750
+# test case 1: AddIncoming2Knot
+ResetModel
+CreateInitialNobs
+AddIncoming2Knot 1 (415.73|812.84)
+UndoCommand
+DeleteNob 1
+AddIncoming2Knot 3 (424.57|796.63)
+MoveNob 2 (4.42|2.95)
+MoveNob 2 (4.42|2.95)
+MoveNob 2 (5.89|4.42)
+MoveNob 2 (11.79|5.89)
+MoveNob 2 (8.84|4.42)
+MoveNob 2 (4.42|2.95)
+MoveNob 2 (1.47|1.47)
+MoveNob 2 (2.95|0.00)
+MoveNob 2 (1.47|1.47)
+MoveNob 2 (2.95|1.47)
+MoveNob 2 (2.95|1.47)
+MoveNob 2 (8.84|4.42)
+MoveNob 2 (10.31|4.42)
+MoveNob 2 (10.31|4.42)
+MoveNob 2 (5.89|2.95)
+MoveNob 2 (8.84|2.95)
+MoveNob 2 (8.84|4.42)
+MoveNob 2 (7.37|1.47)
+MoveNob 2 (10.31|2.95)
+MoveNob 2 (2.95|1.47)
+MoveNob 2 (1.47|1.47)
+MoveNob 2 (1.47|0.00)
+MoveNob 2 (1.47|-2.95)
+MoveNob 2 (1.47|0.00)
+MoveNob 2 (1.47|-1.47)
+MoveNob 2 (4.42|-2.95)
+MoveNob 2 (1.47|-1.47)
+MoveNob 2 (2.95|-2.95)
+MoveNob 2 (8.84|-2.95)
+MoveNob 2 (13.26|-7.37)
+MoveNob 2 (16.21|-8.84)
+MoveNob 2 (10.31|-7.37)
+MoveNob 2 (8.84|-2.95)
+MoveNob 2 (5.89|-4.42)
+MoveNob 2 (7.37|-2.95)
+MoveNob 2 (5.89|-2.95)
+MoveNob 2 (2.95|-2.95)
+MoveNob 2 (0.00|-1.47)
+MoveNob 2 (1.47|0.00)
+MoveNob 2 (0.00|-1.47)
+MoveNob 2 (2.95|-1.47)
+MoveNob 2 (1.47|-1.47)
+MoveNob 2 (1.47|-1.47)
+MoveNob 2 (1.47|-1.47)
+MoveNob 2 (1.47|-1.47)
+MoveNob 2 (1.47|-1.47)
+MoveNob 2 (1.47|0.00)
+MoveNob 2 (0.00|-2.95)
+MoveNob 2 (1.47|-2.95)
+MoveNob 2 (0.00|-1.47)
+MoveNob 2 (1.47|-1.47)
+MoveNob 2 (1.47|-4.42)
+MoveNob 2 (1.47|-4.42)
+MoveNob 2 (1.47|-1.47)
+MoveNob 2 (0.00|-2.95)
+MoveNob 2 (2.95|-2.95)
+MoveNob 2 (2.95|-4.42)
+MoveNob 2 (1.47|-5.89)
+MoveNob 2 (2.95|-4.42)
+MoveNob 2 (2.95|-2.95)
+MoveNob 2 (1.47|-1.47)
+MoveNob 2 (1.47|-1.47)
+MoveNob 2 (0.00|-2.95)
+MoveNob 2 (1.47|0.00)
+AddIncoming2Knot 3 (682.38|740.65)
+MoveNob 6 (4.42|2.95)
+MoveNob 6 (2.95|1.47)
+MoveNob 6 (1.47|2.95)
+MoveNob 6 (2.95|1.47)
+MoveNob 6 (5.89|7.37)
+MoveNob 6 (5.89|4.42)
+MoveNob 6 (4.42|2.95)
+MoveNob 6 (1.47|1.47)
+MoveNob 6 (2.95|2.95)
+MoveNob 6 (1.47|2.95)
+MoveNob 6 (2.95|1.47)
+MoveNob 6 (5.89|2.95)
+MoveNob 6 (4.42|4.42)
+MoveNob 6 (11.79|7.37)
+MoveNob 6 (11.79|7.37)
+MoveNob 6 (11.79|5.89)
+MoveNob 6 (7.37|4.42)
+MoveNob 6 (5.89|1.47)
+MoveNob 6 (4.42|2.95)
+MoveNob 6 (1.47|1.47)
+MoveNob 6 (1.47|0.00)
+MoveNob 6 (1.47|1.47)
+MoveNob 6 (4.42|2.95)
+MoveNob 6 (1.47|1.47)
+MoveNob 6 (5.89|2.95)
+MoveNob 6 (4.42|4.42)
+MoveNob 6 (4.42|4.42)
+MoveNob 6 (7.37|2.95)
+MoveNob 6 (5.89|4.42)
+MoveNob 6 (7.37|4.42)
+MoveNob 6 (4.42|4.42)
+MoveNob 6 (4.42|4.42)
+MoveNob 6 (4.42|4.42)
+MoveNob 6 (5.89|4.42)
+MoveNob 6 (5.89|4.42)
+MoveNob 6 (2.95|5.89)
+MoveNob 6 (2.95|2.95)
+MoveNob 6 (1.47|1.47)
+MoveNob 6 (1.47|2.95)
+MoveNob 6 (1.47|1.47)
+MoveNob 6 (1.47|1.47)
+MoveNob 6 (0.00|2.95)
+MoveNob 6 (1.47|1.47)
+MoveNob 6 (2.95|2.95)
+MoveNob 6 (0.00|1.47)
+MoveNob 6 (1.47|2.95)
+MoveNob 6 (2.95|5.89)
+MoveNob 6 (1.47|2.95)
+MoveNob 6 (1.47|4.42)
+MoveNob 6 (2.95|4.42)
+MoveNob 6 (1.47|2.95)
+MoveNob 6 (2.95|4.42)
+MoveNob 6 (2.95|4.42)
+MoveNob 6 (1.47|4.42)
+MoveNob 6 (2.95|0.00)
+MoveNob 6 (0.00|1.47)
+AddIncoming2Knot 3 (675.02|739.18)
+MoveNob 8 (8.84|0.00)
+MoveNob 8 (11.79|0.00)
+MoveNob 8 (17.68|-1.47)
+MoveNob 8 (16.21|0.00)
+MoveNob 8 (17.68|-1.47)
+MoveNob 8 (14.73|-1.47)
+MoveNob 8 (7.37|0.00)
+MoveNob 8 (8.84|0.00)
+MoveNob 8 (2.95|0.00)
+MoveNob 8 (0.00|4.42)
+MoveNob 8 (0.00|1.47)
+MoveNob 8 (0.00|5.89)
+MoveNob 8 (0.00|4.42)
+MoveNob 8 (0.00|8.84)
+MoveNob 8 (-1.47|8.84)
+MoveNob 8 (-2.95|10.31)
+MoveNob 8 (-1.47|10.31)
+MoveNob 8 (-4.42|22.10)
+MoveNob 8 (-4.42|16.21)
+MoveNob 8 (-4.42|16.21)
+MoveNob 8 (-5.89|11.79)
+MoveNob 8 (-7.37|16.21)
+MoveNob 8 (-7.37|16.21)
+MoveNob 8 (-13.26|20.62)
+MoveNob 8 (-8.84|17.68)
+MoveNob 8 (-8.84|13.26)
+MoveNob 8 (-1.47|2.95)
+MoveNob 8 (-2.95|5.89)
+MoveNob 8 (-4.42|5.89)
+MoveNob 8 (-2.95|5.89)
+MoveNob 8 (-2.95|5.89)
+MoveNob 8 (-4.42|5.89)
+MoveNob 8 (-2.95|2.95)
+MoveNob 8 (-2.95|5.89)
+MoveNob 8 (-4.42|5.89)
+MoveNob 8 (-1.47|2.95)
+MoveNob 8 (-1.47|0.00)
+MoveNob 8 (-2.95|-1.47)
+MoveNob 8 (0.00|-1.47)
+MoveNob 8 (-1.47|-1.47)
+MoveNob 8 (-2.95|-5.89)
+MoveNob 8 (-2.95|-4.42)
+MoveNob 8 (-1.47|-2.95)
+MoveNob 8 (-2.95|-4.42)
+MoveNob 8 (0.00|-1.47)
+MoveNob 8 (-1.47|0.00)
+MoveNob 8 (0.00|-1.47)
+MoveNob 8 (0.00|-1.47)
+UndoCommand
+UndoCommand
+UndoCommand
+UndoCommand
+UndoCommand
+UndoCommand
+UndoCommand
+RedoCommand
+RedoCommand
+RedoCommand
+RedoCommand
+RedoCommand
+RedoCommand
+RedoCommand
