--- a/NNet/Commands/Commands.vcxproj
+++ b/NNet/Commands/Commands.vcxproj
@@ -109,6 +109,7 @@
     <ClInclude Include="SetParameterCommand.h" />
     <ClInclude Include="SetPulseRateCommand.h" />
     <ClInclude Include="SetTriggerSoundCommand.h" />
+    <ClInclude Include="SplitClosedConnCmd.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="ToggleStopOnTriggerCommand.h" />
   </ItemGroup>
