--- a/NNet/NNetWindows/NNetWindows.vcxproj.filters
+++ b/NNet/NNetWindows/NNetWindows.vcxproj.filters
@@ -197,5 +197,8 @@
     <ClInclude Include="PluginIoNeuronAnimation.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="AnimatedCommand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
